[package]
name = "dicewars"
version = "0.1.0"
authors = ["pymole <goglbummm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_chacha = "0.3.1"
indexmap = "1.7.0"
websocket = "0.26.2"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
clap = "3.0.0-beta.2"
